--- a/appmodels/templates/base.html
+++ b/appmodels/templates/base.html
@@ -4,6 +4,44 @@
   <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
   <head>
     <style>
+      body {margin:0;}
+
+      ul {
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+      background-color: #333;
+      position: fixed;
+      top: 0;
+      width: 100%;
+      }
+
+      li {
+      float: left;
+      }
+
+      li a {
+      display: block;
+      color: white;
+      text-align: center;
+      padding: 14px 16px;
+      text-decoration: none;
+      }
+
+      li a:hover:not(.active) {
+      background-color: #111;
+      }
+
+      .active {
+      background-color: #04AA6D;
+      }
+
+      h1, h2, h3, p {
+            text-align: 'center';
+            margin-left: 20px;
+            margin-right: 20px;
+      }
     </style>
   </head>
   <body>
