Modified pages, added location page

--- a/appmodels/templates/tutorial.html
+++ b/appmodels/templates/tutorial.html
@@ -10,7 +10,7 @@
     <ul>
         <li><a href="{{url_for('index')}}">Home</a></li>
         <li><a class="active" href="#tutorial">Tutorial</a></li>
-        <li><a href="{{url_for('findhhw', response=response)}}">Find HHW Center</a></li>
+        <li><a href="{{url_for('findhhw')}}">Find HHW Center</a></li>
     </ul>
     <br><br>
     
@@ -26,7 +26,7 @@
         Nicotine containing juice is hazardous, so bottles and cartridges that are still full or partially full should 
         be taken to your Household Hazardous Waste (HHW) facility for proper disposal. Contact your county to find out 
         if they accept these items at HHW facilities or events.</p>
-    <h3>Find the nearest HHW facility with the <a href="{{url_for('findhhw', response=response)}}">Find HHW Center</a> page.</h3>
+    <h3>Find the nearest HHW facility with the <a href="{{url_for('findhhw')}}">Find HHW Center</a> page.</h3>
     <p>Nicotine is dangerous and can be deadly if ingested or absorbed through the skin. All cartridges, pods and bottles 
         containing nicotine should be stored well out of reach of children.</p>
     <h3>Cartridges containing THC, CBD or other marijuana derivatives</h3>
