--- a/appmodels/templates/index.html
+++ b/appmodels/templates/index.html
@@ -10,7 +10,7 @@
     <ul>
         <li><a class="active" href="#home">Home</a></li>
         <li><a href="{{url_for('tutorial')}}">Tutorial</a></li>
-        <li><a href="{{url_for('findhhw', response=response)}}">Find HHW Center</a></li>
+        <li><a href="{{url_for('findhhw')}}">Find HHW Center</a></li>
     </ul>
     <br><br>
 
