--- a/appmodels/templates/locatehhw.html
+++ b/appmodels/templates/locatehhw.html
@@ -17,10 +17,20 @@
         <li><a class="active" href="#findhhw">Find HHW Center</a></li>
     </ul>
     <br><br>
-
     
-    <p>Search button will be added here.</p>
-    <p><a href="{{url_for('locatehhw')}}">Maps</a></p>
+    
+    <div id = "map"></div>
+    <script>
+        function initMap() {
+            var location = {lat: -25.363, lng: 131.044};
+            var map = new google.maps.Map(document.getElementById("map"), {
+                zoom: 4,
+                center: location
+            });
+        }
+    </script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAHZYXZczuX32rF9XrxeIWrb6Hovn0Kb9w&callback=initMap"></script>
+    <p>{{response.text}}</p>
     
 </body>
 {% endblock %}
